--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -104,7 +104,7 @@
     <string name="color_dont_choosed">Colore non selezionato</string>
     <string name="share_app">Colore non selezionato</string>
     <string name="add_title">Digitare il testo</string>
-    <string name="add_icon">Selezionare un\'immagine:</string>
+    <string name="choose_image">Selezionare un\'immagine:</string>
     <string name="answer_qst">Rispondi alla domanda</string>
     <string name="add_password">Imposta la password</string>
     <string name="qst_not_found">Inserisci la domanda</string>
