--- a/app/src/main/res/values-ky/strings.xml
+++ b/app/src/main/res/values-ky/strings.xml
@@ -105,7 +105,7 @@
     <string name="color_dont_choosed">Эч кандай түс тандалган жок</string>
     <string name="share_app">Бөлүшүү</string>
     <string name="add_title">Текстти тандаңыз</string>
-    <string name="add_icon">Сүрөттү тандаңыз</string>
+    <string name="choose_image">Сүрөттү тандаңыз</string>
     <string name="answer_qst">Суроого жооп бериниз</string>
     <string name="add_password">Сыр сөз коюлган жок</string>
     <string name="qst_not_found">Суроону жазыңыз</string>
