--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -104,7 +104,7 @@
     <string name="color_dont_choosed">色が選択されていない</string>
     <string name="share_app">共有するには</string>
     <string name="add_title">テキストを入力する</string>
-    <string name="add_icon">画像を選択する:</string>
+    <string name="choose_image">画像を選択する:</string>
     <string name="answer_qst">質問に答える</string>
     <string name="add_password">パスワードを設定する</string>
     <string name="qst_not_found">質問を入力する</string>
