--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -326,4 +326,10 @@ swiping to the right, you can remove an Item from the list of frequent spenders.
     <string name="category_name">Название категории</string>
     <string name="icon">Иконка</string>
     <string name="new_habit">Новая привычка</string>
+    <string name="what_done_yesterday">Что было выполненоза вчерашний день?</string>
+    <string name="what_plan_today">Что запланировано на сегодня ?</string>
+    <string name="problems">Проблемы или блокираторы</string>
+    <string name="important_info">Важная информация</string>
+    <string name="skip">Пропустить</string>
+    <string name="next">Дальше</string>
 </resources>
