--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -328,4 +328,14 @@
     <string name="category_name">Название категории</string>
     <string name="icon">Иконка</string>
     <string name="new_habit">Новая привычка</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="what_done_yesterday">Что было выполнено за вчерашний день?</string>
+    <string name="what_plan_today">Что запланировано на сегодня ?</string>
+    <string name="problems">Проблемы или блокираторы</string>
+    <string name="important_info">Важная информация</string>
+    <string name="skip">Пропустить</string>
+    <string name="standup" translatable="false">StandUp</string>
+    <string name="next">Дальше</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
