--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -331,4 +331,6 @@ streichen Sie nach rechts, können Sie ein Element aus der Liste der häufigen A
     <string name="important_info">Важная информация</string>
     <string name="skip">Пропустить</string>
     <string name="next">Дальше</string>
+    <string name="pink">Розовый</string>
+    <string name="violet">Фиолетовый</string>
 </resources>
