--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -331,4 +331,6 @@ scorri verso destra, puoi rimuovere un elemento dall\'elenco delle spese frequen
     <string name="important_info">Важная информация</string>
     <string name="skip">Пропустить</string>
     <string name="next">Дальше</string>
+    <string name="pink">Розовый</string>
+    <string name="violet">Фиолетовый</string>
 </resources>
