--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -332,4 +332,6 @@ deslizando para a direita, você pode remover um item da lista de gastos frequen
     <string name="important_info">Важная информация</string>
     <string name="skip">Пропустить</string>
     <string name="next">Дальше</string>
+    <string name="pink">Розовый</string>
+    <string name="violet">Фиолетовый</string>
 </resources>
