--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -328,7 +328,6 @@
     <string name="category_name">Название категории</string>
     <string name="icon">Иконка</string>
     <string name="new_habit">Новая привычка</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="what_done_yesterday">Что было выполнено за вчерашний день?</string>
     <string name="what_plan_today">Что запланировано на сегодня ?</string>
     <string name="problems">Проблемы или блокираторы</string>
@@ -336,8 +335,25 @@
     <string name="skip">Пропустить</string>
     <string name="standup" translatable="false">StandUp</string>
     <string name="next">Дальше</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="pink">Розовый</string>
     <string name="violet">Фиолетовый</string>
+    <string name="monday">Понедельник</string>
+    <string name="tuesday">Вторник</string>
+    <string name="wednesday">Среда</string>
+    <string name="thursday">Четверг</string>
+    <string name="friday">Пятница</string>
+    <string name="saturday">Суббота</string>
+    <string name="sunday">Воскресенье</string>
+    <string name="timetable">Расписание</string>
+    <string name="stand_up">Стэндап</string>
+    <string name="focus">Фокус</string>
+    <string-array name="dayOfWeek_array">
+        <item>@string/monday</item>
+        <item>@string/tuesday</item>
+        <item>@string/wednesday</item>
+        <item>@string/thursday</item>
+        <item>@string/friday</item>
+        <item>@string/saturday</item>
+        <item>@string/sunday</item>
+    </string-array>
 </resources>
