--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -356,4 +356,6 @@ scorri verso destra, puoi rimuovere un elemento dall\'elenco delle spese frequen
     <string name="not_correct">Не верно</string>
     <string name="changePassword">Сменить пароль</string>
     <string name="unblock">Разблокировать</string>
+    <string name="heavenly">Небесный</string>
+    <string name="bilberry">Черничный</string>
 </resources>
